--- a/src/index.html
+++ b/src/index.html
@@ -7,8 +7,10 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
   <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet">
+
 </head>
 <body>
   <app-root>Loading...</app-root>
+  <script src="/src/app/shares/jsontohtml/json2html.js"></script>
 </body>
 </html>
